Rearchitectured the project structure as a test to better stream line larger apis
