# docs/swagger.json
@@ -11,9 +11,31 @@
         "version": "0.1"
     },
     "host": "localhost:8000",
-    "basePath": "/api/v1",
+    "basePath": "/v1",
     "paths": {
         "/posts": {
+            "get": {
+                "description": "Returns every post in the database",
+                "consumes": [
+                    "application/json"
+                ],
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "posts"
+                ],
+                "summary": "Get all posts",
+                "operationId": "GetAllPosts",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/posts.Post"
+                        }
+                    }
+                }
+            },
             "post": {
                 "description": "Creates a post, along with a message then sends user an anonymous email with said message",
                 "consumes": [
@@ -34,7 +56,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handler.postparams"
+                            "$ref": "#/definitions/posts.postparams"
                         }
                     }
                 ],
@@ -42,7 +64,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Post"
+                            "$ref": "#/definitions/posts.Post"
                         }
                     }
                 }
@@ -74,7 +96,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.Post"
+                            "$ref": "#/definitions/posts.Post"
                         }
                     }
                 }
@@ -107,9 +129,9 @@
                 }
             }
         },
-        "/user": {
+        "/users": {
             "get": {
-                "description": "Can search using username, email or name",
+                "description": "This will show all users that have been stored in the local DB.These users would have been synced on start up of the application. If not some default users would have been generated for testing.",
                 "consumes": [
                     "application/json"
                 ],
@@ -119,21 +141,13 @@
                 "tags": [
                     "user"
                 ],
-                "summary": "Search for a User account",
-                "operationId": "GetUser",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "username, email, name",
-                        "name": "search",
-                        "in": "query"
-                    }
-                ],
+                "summary": "Lists all users in the database.",
+                "operationId": "GetUsers",
                 "responses": {
                     "200": {
-                        "description": "no search, no user",
+                        "description": "OK",
                         "schema": {
-                            "type": "string"
+                            "$ref": "#/definitions/users.User"
                         }
                     }
                 }
@@ -158,7 +172,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/handler.userparams"
+                            "$ref": "#/definitions/users.userparams"
                         }
                     }
                 ],
@@ -166,13 +180,13 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/users.User"
                         }
                     }
                 }
             }
         },
-        "/user/post/{id}": {
+        "/users/post/{id}": {
             "get": {
                 "description": "Get all the posts created using a users ID",
                 "consumes": [
@@ -201,7 +215,7 @@
                 }
             }
         },
-        "/user/{id}": {
+        "/users/{id}": {
             "get": {
                 "description": "Return a single user using their ID",
                 "consumes": [
@@ -227,7 +241,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/models.User"
+                            "$ref": "#/definitions/users.User"
                         }
                     }
                 }
@@ -262,65 +276,10 @@
                     }
                 }
             }
-        },
-        "/users": {
-            "get": {
-                "description": "This will show all users that have been stored in the local DB.These users would have been synced on start up of the application. If not some default users would have been generated for testing.",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "user"
-                ],
-                "summary": "Lists all users in the database.",
-                "operationId": "GetUsers",
-                "responses": {
-                    "200": {
-                        "description": "OK",
-                        "schema": {
-                            "$ref": "#/definitions/models.User"
-                        }
-                    }
-                }
-            }
         }
     },
     "definitions": {
-        "handler.postparams": {
-            "type": "object",
-            "properties": {
-                "author_id": {
-                    "type": "string"
-                },
-                "message": {
-                    "type": "string"
-                },
-                "user_id": {
-                    "type": "string"
-                }
-            }
-        },
-        "handler.userparams": {
-            "type": "object",
-            "properties": {
-                "email": {
-                    "type": "string"
-                },
-                "first_name": {
-                    "type": "string"
-                },
-                "last_name": {
-                    "type": "string"
-                },
-                "username": {
-                    "type": "string"
-                }
-            }
-        },
-        "models.Post": {
+        "posts.Post": {
             "type": "object",
             "properties": {
                 "author_id": {
@@ -343,7 +302,21 @@
                 }
             }
         },
-        "models.User": {
+        "posts.postparams": {
+            "type": "object",
+            "properties": {
+                "author_id": {
+                    "type": "string"
+                },
+                "message": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "string"
+                }
+            }
+        },
+        "users.User": {
             "type": "object",
             "properties": {
                 "api_key": {
@@ -365,6 +338,23 @@
                     "type": "string"
                 },
                 "updated_at": {
+                    "type": "string"
+                },
+                "username": {
+                    "type": "string"
+                }
+            }
+        },
+        "users.userparams": {
+            "type": "object",
+            "properties": {
+                "email": {
+                    "type": "string"
+                },
+                "first_name": {
+                    "type": "string"
+                },
+                "last_name": {
                     "type": "string"
                 },
                 "username": {
